Fix overflow problem in IE11

--- a/assets/stylesheets/oauth/oauth.scss
+++ b/assets/stylesheets/oauth/oauth.scss
@@ -139,6 +139,7 @@
     margin-top: 8px;
     padding-top: 4px;
     overflow-y: auto;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
     list-style-type: none;
     border-top: 1px solid #EEE;
     font-family: 'Open Sans';
